# moe-emergence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_MISTAKES.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  loc.py  pyproject.toml  sample_test.py
.claude/: settings.local.json
.claude/commands/: doc-decision.md  doc-experiment.md  doc-fix.md  doc-paper.md  doc-review.md  doc-status.md
docs/: DATA-PIPELINE-CRITICAL-ANALYSIS.md  DATA-PIPELINE.md  GPU-SETUP.md  README.md  WORKFLOW.md
docs/code-reviews/: 001-2024-12-23-moe-py-review.md  001-2025-12-23-moe-py-review.md  002-2024-12-23-moe-py-fix.md  002-2025-12-23-moe-py-fix.md  003-2024-12-23-gpt2-moe-fix.md  003-2025-12-23-gpt2-moe-fix.md  004-2025-12-23-loss-dedup-and-tests.md  005-2025-12-26-data-py-fix.md  006-2026-02-18-phase4-training-review.md  007-2026-02-18-phase4-training-fix.md  008-2026-02-26-phase5-analysis-fix.md
docs/decisions/: 001-base-model-choice.md  002-moe-last-4-layers.md  003-warm-start-via-deepcopy.md  004-router-3d-only-input.md  005-phase3-data-sizing.md  006-streaming-shuffle-buffer.md  007-math-prefix-randomization.md  008-text-level-validation-split.md  009-experiment-tracking.md  009-math-subdomain-labels.md  010-dataset-choices.md  011-formatting-artifact-verification.md  012-shuffle-before-truncate.md  013-compute-and-dispatch-strategy.md  _TEMPLATE.md
docs/experiments/: _TEMPLATE.md  run-001-gpt2-integration-verification.md  run-002-phase4-hardening-shakedown.md  run-003-gpu-shakedown-primeintellect.md  run-004-dense-baseline.md  run-005-moe-main.md  run-006-no-lb-ablation.md  run-007-top2-directional.md
docs/literature/: _TEMPLATE.md  fedus-2021-switch-transformer.md  (+1 more)
moe-emergence/: data.py  ffn.py  gpt2_inference.py  gpt2_moe.py  moe.py  training_demo.py  verify_gpt2_integration.py
moe_emergence/: analysis.py  data.py  ffn.py  gpt2_inference.py  gpt2_moe.py  moe.py  tracking.py  train.py  training_demo.py  verify_formatting.py  verify_gpt2_integration.py  visualize.py
notebooks/: crossentropyloss.ipynb  expertweights.ipynb  phase5_analysis.ipynb
scripts/: export_wandb.py  sample_test.py
(+27 files in other folders)
