[project]
name = "moe-emergence"
version = "0.1.0"
description = "Training a small MoE model on 3 domains (code, math, prose) to demonstrate expert specialization emergence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
