[project]
name = "moe-emergence"
version = "0.1.0"
description = "Training a small MoE model on 3 domains (code, math, prose) to demonstrate expert specialization emergence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks/**"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-third-party = [
    "datasets",
    "numpy",
    "torch",
    "transformers",
]
known-first-party = [
    "data",
    "ffn",
    "gpt2_inference",
    "gpt2_moe",
    "moe",
    "training_demo",
    "verify_gpt2_integration",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
